--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,8 +24,9 @@ html, body {
 body {
 	background: rgb(226, 227, 233);
 	font-size: 100%;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: lighter;
+	margin: 0;
 }
 
 #wrapper {
@@ -34,8 +35,11 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
-	height: 90%;
+	height: 100%;
+	min-height: 500px;
 	position:relative;	
+	z-index:2;
+	margin
 }
 
 a {
@@ -55,6 +59,7 @@ header h1 {
 	margin: 0;
 	padding: 10px 0 50px 0;
 	color:rgb(75,75,75);
+	font-family:'Helvetica Neue', Helvetica, Arial, sans-serif
 }
 
 #nav {
@@ -62,6 +67,7 @@ header h1 {
 	font-size:1em;
 	width:20%;
 	min-width:50px;	
+	margin: 50px 0 20px 0;
 }
 
 #nav a:hover {
@@ -72,6 +78,7 @@ header h1 {
 	float:right;
 	width:80%;
 	min-width:200px;
+	margin: 50px 0 20px 0;
 }
 
 
@@ -88,9 +95,19 @@ header h1 {
 }
 
 footer, .page-wrap:after {
-  height: 142px; 
+  height: 50px; 
 }
+
 footer {
-  background: orange;
-  text-align:right;
+  	width:80%;
+	min-width: 500px;
+	margin: 0 auto;
+  	text-align:right;
+}
+
+div#animation {
+	position:absolute;
+	margin: 0;
+	padding: 0;
+	z-index:3;
 }
